--- a/employees.api/appsettings.json
+++ b/employees.api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings" : {
-      "DbConnect" : "Server=localhost;Port=3306;Database=EmployeeDB;Uid=root;Password=kontol123"
+      "DbConnect" : "Server=localhost;Port=3306;Database=EmployeeDB;Uid=root;Password="
   },
 
   "Logging": {
